# red-sea-monitoring

./: .buildinfo  .pre-commit-config.yaml  CONTRIBUTING.html  README.html  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: project-setup.yaml
_sources/: README.md
_sources/docs/: 1-intro-to-data-goods.md  2-analytics.md  2-foundational-data.md  6-team.md
data/: red_sea_ports.geojson
docs/: 1-intro-to-data-goods.html  1-intro-to-data-goods.md  1-intro-to-data-lab.html  1-intro-to-data-lab.md  2-analytics.html  2-data.html  2-data.md  2-foundational-data.html  2-foundational-data.md  3-add-resources.html  3-add-resources.md  4-sample-insights-and-ind.html  4-sample-insights-and-ind.md  6-team.html  6-team.md  CODE_OF_CONDUCT.html  _config.yml  _toc.yml  bibliography.bib  gallery.html
notebooks/: README.html  README.md  bibliography.html  nasa-apod.html  world-bank-api.html  world-bank-package.html
notebooks/chokepoints/: README.html  README.md  red-sea-chokepoints.html  red-sea-chokepoints.ipynb
notebooks/conflict/: README.html  README.md  acled-persian-gulf.html  acled-persian-gulf.ipynb  acled.html  acled.ipynb
notebooks/houthis/: houthis-tax.html  houthis-tax.ipynb
notebooks/indicators/: conflict-and-trade.html  conflict-and-trade.ipynb
notebooks/mobility/: README.html
notebooks/ports/: README.html  README.md  red-sea-ports-weekly.ipynb  red-sea-ports.html  red-sea-ports.ipynb
notebooks/routes/: 1-data-extraction.html  1-data-extraction.ipynb  2-prepare-sea-routes copy.ipynb  README.html  (+8 more)
(+25 files in other folders)
