[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "red-sea-monitoring"
dynamic = ["version"]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["world bank"]
authors = [{ name = "World Bank Data Lab", email = "datalab@worldbank.org" }]
maintainers = [
	{ name = "Andres Chamorro", email = "achamorroelizond@worldbank.org" },
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
	"bokeh>3,<4",
    "geopandas>=0.12",
	"pandas",
	"requests",
]

[project.optional-dependencies]
docs = [
	"docutils==0.17.1",     # https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=0.15.1",
]
[project.urls]
"Homepage" = "https://datapartnership.github.io/red-sea-monitoring"
"Bug Reports" = "https://github.com/datapartnership/red-sea-monitoring/issues"
"Source" = "https://github.com/datapartnership/red-sea-monitoring"

[tool.codespell]
skip = './.git,docs/_build,docs/references.bib,*.py,*.R,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,"

[tool.hatch.build.targets.wheel]
packages = ["src/red_sea_monitoring"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
